# MemFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_extract.py
docs/: 00_context.md  05_cli_contract.md  10_extractor_field_reference.md  2026-03-08-demo-run-MEMORY-DMP.md  2026-03-10-plugin-extractor-architecture.md  USER_GUIDE_EN.md  USER_GUIDE_HE.md
extractors/: __init__.py  base.py  devices.py  dlls.py  drivers.py  files.py  findevil.py  handles.py  modules.py  netstat.py  processes.py  registry.py  services.py  tasks.py  threads.py  timelines.py  unloaded_modules.py
memflow_common/: __init__.py  csv_io.py
memflow_parser/: __init__.py  engine.py
memflow_rules/: __init__.py  injection.json  lateral.json  network.json  persistence.json  process.json
memflow_specs/: __init__.py  devices.yaml  drivers.yaml  files.yaml  findevil.yaml  handles.yaml  modules.yaml  net.yaml  netdns.yaml  prefetch.yaml  process.yaml  services.yaml  tasks.yaml  threads.yaml  timeline_all.yaml  timeline_kernelobject.yaml  timeline_net.yaml  timeline_ntfs.yaml  timeline_prefetch.yaml  timeline_process.yaml  timeline_registry.yaml  timeline_task.yaml  timeline_thread.yaml  timeline_web.yaml  unloaded_modules.yaml  yara.yaml
tests/: test_csv_io.py  test_extractors.py  test_memflow_entropy.py  test_memflow_inventory.py  test_memflow_spec_scaffold.py  test_memflow_validate.py  test_parser_engine.py
tools/: __init__.py  memflow_alerts_injection.py  memflow_alerts_lateral.py  memflow_alerts_network.py  memflow_alerts_persistence.py  memflow_alerts_process.py  memflow_entropy.py  memflow_ingest.py  memflow_inventory.py  memflow_parse_generic.py  memflow_spec_scaffold.py  memflow_validate.py
